--- a/LAB-4/client.html
+++ b/LAB-4/client.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Weather Station Client</h1>
 
+  <!-- Form for creating new weather data -->
   <h2>Opret ny vejrdata</h2>
   <form id="addForm">
     ID: <input type="number" id="id"><br>
@@ -20,6 +21,7 @@
     <button type="submit">Send (POST)</button>
   </form>
 
+  <!-- Form for updating existing weather data by ID -->
   <h2>Opdater vejrdata</h2>
   <form id="updateForm">
     ID (til opdatering): <input type="number" id="updateId"><br>
@@ -33,19 +35,28 @@
     <button type="submit">Opdater (PUT)</button>
   </form>
 
+  <!-- Buttons to trigger different GET requests -->
   <h2>Alle vejrdata</h2>
-  <button onclick="fetchWeather()">Hent data</button>
-  <pre id="output"></pre>
+  <button onclick="fetchWeather()">Hent alle</button>
 
-  <h2>WebSocket Sektion</h2>
-  <button onclick="startWebSocket()">Start WebSocket</button>
-  <button onclick="sendMessage()">Send besked</button>
-  <div id="wsupdate">WebSocket status...</div>
+  <h2>Hent vejrdata med ID</h2>
+  ID: <input type="number" id="getId">
+  <button onclick="fetchById()">Hent ID</button>
+
+  <h2>Hent vejrdata med dato</h2>
+  Date: <input type="number" id="getDate">
+  <button onclick="fetchByDate()">Hent dato</button>
+
+  <h2>Seneste 3 vejrdata</h2>
+  <button onclick="fetchLatest()">Hent seneste 3</button>
+
+  <!-- Output container for displaying server responses -->
+  <pre id="output"></pre>
 
   <script>
     const server = "http://localhost:8080";
-    let socket;
 
+    // Handle POST request to add new data
     document.getElementById("addForm").onsubmit = async function(e) {
       e.preventDefault();
       const data = {
@@ -66,6 +77,7 @@
       alert("Sendt: " + res.status);
     };
 
+    // Handle PUT request to update data by ID
     document.getElementById("updateForm").onsubmit = async function(e) {
       e.preventDefault();
       const id = parseInt(document.getElementById("updateId").value, 10);
@@ -87,31 +99,34 @@
       alert("Opdateret: " + res.status);
     };
 
+    // GET all weather data
     async function fetchWeather() {
       const res = await fetch(server + "/");
       const data = await res.json();
       document.getElementById("output").textContent = JSON.stringify(data, null, 2);
     }
 
-    function startWebSocket() {
-      socket = new WebSocket('ws://localhost:8080/chat');
-      socket.addEventListener('open', function () {
-        document.getElementById("wsupdate").innerText = "Forbundet til WebSocket-server.";
-      });
-      socket.addEventListener('message', function (message) {
-        document.getElementById("wsupdate").innerText = "Modtaget: " + message.data;
-      });
-      socket.addEventListener('close', function () {
-        document.getElementById("wsupdate").innerText = "WebSocket lukket.";
-      });
+    // GET specific entry by ID
+    async function fetchById() {
+      const id = document.getElementById("getId").value;
+      const res = await fetch(server + "/id/" + id);
+      const data = await res.json();
+      document.getElementById("output").textContent = JSON.stringify(data, null, 2);
     }
 
-    function sendMessage() {
-      if (socket && socket.readyState === WebSocket.OPEN) {
-        socket.send("Hej fra klienten!");
-      } else {
-        alert("WebSocket er ikke åben endnu.");
-      }
+    // GET entries by date
+    async function fetchByDate() {
+      const date = document.getElementById("getDate").value;
+      const res = await fetch(server + "/date/" + date);
+      const data = await res.json();
+      document.getElementById("output").textContent = JSON.stringify(data, null, 2);
+    }
+
+    // GET the latest 3 entries
+    async function fetchLatest() {
+      const res = await fetch(server + "/latest");
+      const data = await res.json();
+      document.getElementById("output").textContent = JSON.stringify(data, null, 2);
     }
   </script>
 </body>
