--- a/LAB-4/client.html
+++ b/LAB-4/client.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Weather Station Client</h1>
 
-  <!-- Form for creating new weather data -->
+  <!-- Form to POST new weather data -->
   <h2>Opret ny vejrdata</h2>
   <form id="addForm">
     ID: <input type="number" id="id"><br>
@@ -21,7 +21,7 @@
     <button type="submit">Send (POST)</button>
   </form>
 
-  <!-- Form for updating existing weather data by ID -->
+  <!-- Form to PUT (update) weather data -->
   <h2>Opdater vejrdata</h2>
   <form id="updateForm">
     ID (til opdatering): <input type="number" id="updateId"><br>
@@ -35,7 +35,7 @@
     <button type="submit">Opdater (PUT)</button>
   </form>
 
-  <!-- Buttons to trigger different GET requests -->
+  <!-- Various GET data queries -->
   <h2>Alle vejrdata</h2>
   <button onclick="fetchWeather()">Hent alle</button>
 
@@ -50,13 +50,20 @@
   <h2>Seneste 3 vejrdata</h2>
   <button onclick="fetchLatest()">Hent seneste 3</button>
 
-  <!-- Output container for displaying server responses -->
+  <!-- WebSocket interaction -->
+  <h2>WebSocket Sektion</h2>
+  <button onclick="startWebSocket()">Start WebSocket</button>
+  <button onclick="sendMessage()">Send besked</button>
+  <div id="wsupdate">WebSocket status...</div>
+
+  <!-- Output box -->
   <pre id="output"></pre>
 
   <script>
     const server = "http://localhost:8080";
+    let socket;
 
-    // Handle POST request to add new data
+    // POST new data
     document.getElementById("addForm").onsubmit = async function(e) {
       e.preventDefault();
       const data = {
@@ -77,7 +84,7 @@
       alert("Sendt: " + res.status);
     };
 
-    // Handle PUT request to update data by ID
+    // PUT update existing data
     document.getElementById("updateForm").onsubmit = async function(e) {
       e.preventDefault();
       const id = parseInt(document.getElementById("updateId").value, 10);
@@ -106,7 +113,7 @@
       document.getElementById("output").textContent = JSON.stringify(data, null, 2);
     }
 
-    // GET specific entry by ID
+    // GET data by ID
     async function fetchById() {
       const id = document.getElementById("getId").value;
       const res = await fetch(server + "/id/" + id);
@@ -114,7 +121,7 @@
       document.getElementById("output").textContent = JSON.stringify(data, null, 2);
     }
 
-    // GET entries by date
+    // GET data by date
     async function fetchByDate() {
       const date = document.getElementById("getDate").value;
       const res = await fetch(server + "/date/" + date);
@@ -122,11 +129,34 @@
       document.getElementById("output").textContent = JSON.stringify(data, null, 2);
     }
 
-    // GET the latest 3 entries
+    // GET latest 3 entries
     async function fetchLatest() {
       const res = await fetch(server + "/latest");
       const data = await res.json();
       document.getElementById("output").textContent = JSON.stringify(data, null, 2);
+    }
+
+    // Initialize WebSocket connection
+    function startWebSocket() {
+      socket = new WebSocket('ws://localhost:8080/chat');
+      socket.addEventListener('open', function () {
+        document.getElementById("wsupdate").innerText = "Forbundet til WebSocket-server.";
+      });
+      socket.addEventListener('message', function (message) {
+        document.getElementById("wsupdate").innerText = "Modtaget: " + message.data;
+      });
+      socket.addEventListener('close', function () {
+        document.getElementById("wsupdate").innerText = "WebSocket lukket.";
+      });
+    }
+
+    // Send a message to WebSocket server
+    function sendMessage() {
+      if (socket && socket.readyState === WebSocket.OPEN) {
+        socket.send("Hej fra klienten!");
+      } else {
+        alert("WebSocket er ikke åben endnu.");
+      }
     }
   </script>
 </body>
